<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cmput301f17t12.quirks.Activities.EditEventActivity">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/comment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_text"
        android:layout_alignParentStart="true"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/comment_edittext"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/comment_text"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:maxLength="20"
        android:background="@color/backgroundlight"
        android:textSize="17sp"
        android:inputType="text" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/photo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_photo_text"
        android:layout_below="@+id/comment_edittext"
        android:textSize="17sp" />

    <RelativeLayout
        android:id="@+id/photobox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photo_text"
        android:layout_marginStart="10dp">

        <Button
            android:id="@+id/browse_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="pickPhoto"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:text="@string/new_event_topbutton" />

        <Button
            android:id="@+id/remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/browse_button"
            android:onClick="removePhoto"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:text="@string/new_event_bottombutton" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="25dp"
            android:layout_toEndOf="@+id/browse_button"
            android:layout_marginStart="25dp"
            android:minHeight="140dp"
            android:background="@color/backgroundlight" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:layout_below="@+id/photobox"
        android:layout_above="@+id/errormsg"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="33dp">

        <fragment
            android:id="@+id/event_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment" />

        <!-- A small label at the top of the screen. -->
        <TextView
            android:id="@+id/event_tap_text"
            android:text="Tap on the map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/errormsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/errormsg_newevent"
        android:visibility="invisible"
        android:layout_above="@+id/savecancel"
        android:textSize="17sp"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/savecancel"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:onClick="saveCommand"
            android:text="@string/save" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:onClick="deleteCommand"
            android:text="@string/delete" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:onClick="cancelCommand"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>
