<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_gravity="center"
    android:background="@color/backgroundlight">

    <RelativeLayout
        android:layout_marginStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/el_eventcomment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="16sp"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/el_eventdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="14sp"
            android:layout_below="@id/el_eventcomment" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/el_eventview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="42dp"
        app:srcCompat="@android:drawable/ic_media_play" />

</RelativeLayout>